[gd_scene load_steps=6 format=3 uid="uid://bb3c305h4bq15"]

[ext_resource type="Script" path="res://frog.gd" id="1_h5ny0"]
[ext_resource type="PackedScene" uid="uid://dqo6wkvvlc6h0" path="res://frog_sprite.tscn" id="2_duqlj"]
[ext_resource type="AudioStream" uid="uid://opaxiis5mpbq" path="res://sfx/lick2.wav" id="2_vcbpq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yqcoj"]
radius = 11.0
height = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1n5w"]
size = Vector2(20, 160)

[node name="Frog" type="Area2D"]
position = Vector2(0, 11)
script = ExtResource("1_h5ny0")

[node name="SFX" type="Node2D" parent="."]

[node name="SFXCatch" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("2_vcbpq")
volume_db = -9.369

[node name="FrogSprite" parent="." instance=ExtResource("2_duqlj")]
unique_name_in_owner = true
position = Vector2(0, -20)

[node name="FrogCollider" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -11)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yqcoj")
debug_color = Color(0.624944, 0.532169, 0, 0.42)

[node name="FlyCollision" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="FlyDetection" type="CollisionShape2D" parent="FlyCollision"]
shape = SubResource("RectangleShape2D_t1n5w")
debug_color = Color(0.568627, 0.392157, 1, 0.419608)

[node name="FlyDetection2" type="CollisionShape2D" parent="FlyCollision"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_t1n5w")
debug_color = Color(0.568752, 0.390349, 1, 0.42)

[connection signal="fly_caught" from="FrogSprite" to="." method="on_caught_fly"]
